feat(dl): support download file with `file_regex` param
example:

curl -v "http://localhost:8000/oci-file/hub.pingcap.net/pingcap/tidb/package?tag=v8.3.0_linux_amd64&
file_regex=tidb-lightning-.%2A%5B.%5Dsha256"

to download the file with regex pattern `tidb-lightning-.*[.]sha256`.
